[tool.poetry]
name = "repl_python3_EpicGamesBot"
version = "0.1.0"
description = ""
authors = ["nasermily <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.7.3"
selenium = "^3.141.0"
chromedriver-py = "^92.0.4515"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
